--- a/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/Makefile.Release
+++ b/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/Makefile.Release
@@ -281,7 +281,7 @@ release/moc_cadastro.cpp: ../Projeto/cadastro.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qloggingcategory.h \
 		release/moc_predefs.h \
 		C:/Qt/6.2.0/mingw81_64/bin/moc.exe
-	C:\Qt\6.2.0\mingw81_64\bin\moc.exe $(DEFINES) --include "C:/Users/rodri/Documents/GitHub/ProjetoLP1/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.2.0/mingw81_64/mkspecs/win32-g++ -I"C:/Users/rodri/Documents/GitHub/ProjetoLP1/Projeto 3/Projeto" -IC:/Qt/6.2.0/mingw81_64/include -IC:/Qt/6.2.0/mingw81_64/include/QtWidgets -IC:/Qt/6.2.0/mingw81_64/include/QtGui -IC:/Qt/6.2.0/mingw81_64/include/QtCore -I. -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++ -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/backward -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include-fixed -IC:/Qt/Tools/mingw810_64/x86_64-w64-mingw32/include ..\Projeto\cadastro.h -o release\moc_cadastro.cpp
+	C:\Qt\6.2.0\mingw81_64\bin\moc.exe $(DEFINES) --include "C:/Users/taylo/OneDrive/Documentos/GitHub/ProjetoLP1/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.2.0/mingw81_64/mkspecs/win32-g++ -I"C:/Users/taylo/OneDrive/Documentos/GitHub/ProjetoLP1/Projeto 3/Projeto" -IC:/Qt/6.2.0/mingw81_64/include -IC:/Qt/6.2.0/mingw81_64/include/QtWidgets -IC:/Qt/6.2.0/mingw81_64/include/QtGui -IC:/Qt/6.2.0/mingw81_64/include/QtCore -I. -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++ -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/backward -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include-fixed -IC:/Qt/Tools/mingw810_64/x86_64-w64-mingw32/include ..\Projeto\cadastro.h -o release\moc_cadastro.cpp
 
 release/moc_menu.cpp: ../Projeto/menu.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QMainWindow \
@@ -417,7 +417,7 @@ release/moc_menu.cpp: ../Projeto/menu.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qicon.h \
 		release/moc_predefs.h \
 		C:/Qt/6.2.0/mingw81_64/bin/moc.exe
-	C:\Qt\6.2.0\mingw81_64\bin\moc.exe $(DEFINES) --include "C:/Users/rodri/Documents/GitHub/ProjetoLP1/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.2.0/mingw81_64/mkspecs/win32-g++ -I"C:/Users/rodri/Documents/GitHub/ProjetoLP1/Projeto 3/Projeto" -IC:/Qt/6.2.0/mingw81_64/include -IC:/Qt/6.2.0/mingw81_64/include/QtWidgets -IC:/Qt/6.2.0/mingw81_64/include/QtGui -IC:/Qt/6.2.0/mingw81_64/include/QtCore -I. -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++ -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/backward -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include-fixed -IC:/Qt/Tools/mingw810_64/x86_64-w64-mingw32/include ..\Projeto\menu.h -o release\moc_menu.cpp
+	C:\Qt\6.2.0\mingw81_64\bin\moc.exe $(DEFINES) --include "C:/Users/taylo/OneDrive/Documentos/GitHub/ProjetoLP1/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.2.0/mingw81_64/mkspecs/win32-g++ -I"C:/Users/taylo/OneDrive/Documentos/GitHub/ProjetoLP1/Projeto 3/Projeto" -IC:/Qt/6.2.0/mingw81_64/include -IC:/Qt/6.2.0/mingw81_64/include/QtWidgets -IC:/Qt/6.2.0/mingw81_64/include/QtGui -IC:/Qt/6.2.0/mingw81_64/include/QtCore -I. -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++ -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/backward -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include-fixed -IC:/Qt/Tools/mingw810_64/x86_64-w64-mingw32/include ..\Projeto\menu.h -o release\moc_menu.cpp
 
 release/moc_verifica.cpp: ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QWidget \
@@ -550,7 +550,7 @@ release/moc_verifica.cpp: ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qloggingcategory.h \
 		release/moc_predefs.h \
 		C:/Qt/6.2.0/mingw81_64/bin/moc.exe
-	C:\Qt\6.2.0\mingw81_64\bin\moc.exe $(DEFINES) --include "C:/Users/rodri/Documents/GitHub/ProjetoLP1/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.2.0/mingw81_64/mkspecs/win32-g++ -I"C:/Users/rodri/Documents/GitHub/ProjetoLP1/Projeto 3/Projeto" -IC:/Qt/6.2.0/mingw81_64/include -IC:/Qt/6.2.0/mingw81_64/include/QtWidgets -IC:/Qt/6.2.0/mingw81_64/include/QtGui -IC:/Qt/6.2.0/mingw81_64/include/QtCore -I. -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++ -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/backward -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include-fixed -IC:/Qt/Tools/mingw810_64/x86_64-w64-mingw32/include ..\Projeto\verifica.h -o release\moc_verifica.cpp
+	C:\Qt\6.2.0\mingw81_64\bin\moc.exe $(DEFINES) --include "C:/Users/taylo/OneDrive/Documentos/GitHub/ProjetoLP1/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.2.0/mingw81_64/mkspecs/win32-g++ -I"C:/Users/taylo/OneDrive/Documentos/GitHub/ProjetoLP1/Projeto 3/Projeto" -IC:/Qt/6.2.0/mingw81_64/include -IC:/Qt/6.2.0/mingw81_64/include/QtWidgets -IC:/Qt/6.2.0/mingw81_64/include/QtGui -IC:/Qt/6.2.0/mingw81_64/include/QtCore -I. -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++ -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/backward -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include -IC:/Qt/Tools/mingw810_64/lib/gcc/x86_64-w64-mingw32/8.1.0/include-fixed -IC:/Qt/Tools/mingw810_64/x86_64-w64-mingw32/include ..\Projeto\verifica.h -o release\moc_verifica.cpp
 
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
@@ -1131,6 +1131,10 @@ release/menu.o: ../Projeto/menu.cpp ../Projeto/menu.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QVBoxLayout \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QWidget \
 		../Projeto/verifica.h \
+		ui_verifica.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QHBoxLayout \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QRadioButton \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qradiobutton.h \
 		../Projeto/produtos.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QMessageBox \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qmessagebox.h \
@@ -1400,21 +1404,6 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qnativeinterface.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qloggingcategory.h \
 		ui_verifica.h \
-		../Projeto/variaveis.cpp \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/QVector \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qvector.h \
-		../Projeto/produtos.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QMessageBox \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qmessagebox.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qdialog.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDebug \
-		../Projeto/cadastro.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QDialog \
-		ui_cadastro.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDate \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qdatetime.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qcalendar.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qlocale.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/QVariant \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QApplication \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qapplication.h \
@@ -1435,7 +1424,39 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qcoreapplication_platform.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qguiapplication.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qinputmethod.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qlocale.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qguiapplication_platform.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QHBoxLayout \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qboxlayout.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayout.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayoutitem.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qgridlayout.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLabel \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlabel.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qframe.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtGui/qpicture.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextdocument.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QPushButton \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qpushbutton.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractbutton.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtGui/qicon.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QRadioButton \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qradiobutton.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QVBoxLayout \
+		../Projeto/variaveis.cpp \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/QVector \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qvector.h \
+		../Projeto/produtos.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QMessageBox \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qmessagebox.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qdialog.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDebug \
+		../Projeto/cadastro.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QDialog \
+		ui_cadastro.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDate \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qdatetime.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qcalendar.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QComboBox \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qcombobox.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractitemdelegate.h \
@@ -1443,14 +1464,12 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractspinbox.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qvalidator.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qregularexpression.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtGui/qicon.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qslider.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractslider.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qstyle.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qtabbar.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qtabwidget.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qrubberband.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qframe.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qabstractitemmodel.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QDateEdit \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qdatetimeedit.h \
@@ -1459,28 +1478,15 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QFormLayout \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qformlayout.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLayout \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayout.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayoutitem.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qboxlayout.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qgridlayout.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QGridLayout \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QHBoxLayout \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLabel \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlabel.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtGui/qpicture.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextdocument.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLineEdit \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlineedit.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextcursor.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextformat.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qpen.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextoption.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QPushButton \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qpushbutton.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractbutton.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QSpacerItem \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QSpinBox \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QVBoxLayout
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QSpinBox
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\verifica.o ..\Projeto\verifica.cpp
 
 release/qrc_arquivos.o: release/qrc_arquivos.cpp 
