--- a/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/Makefile.Release
+++ b/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/Makefile.Release
@@ -1131,6 +1131,10 @@ release/menu.o: ../Projeto/menu.cpp ../Projeto/menu.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QVBoxLayout \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QWidget \
 		../Projeto/verifica.h \
+		ui_verifica.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QHBoxLayout \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QRadioButton \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qradiobutton.h \
 		../Projeto/produtos.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QMessageBox \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qmessagebox.h \
@@ -1400,21 +1404,6 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qnativeinterface.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qloggingcategory.h \
 		ui_verifica.h \
-		../Projeto/variaveis.cpp \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/QVector \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qvector.h \
-		../Projeto/produtos.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QMessageBox \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qmessagebox.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qdialog.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDebug \
-		../Projeto/cadastro.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QDialog \
-		ui_cadastro.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDate \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qdatetime.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qcalendar.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtCore/qlocale.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/QVariant \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QApplication \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qapplication.h \
@@ -1435,7 +1424,39 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qcoreapplication_platform.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qguiapplication.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qinputmethod.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qlocale.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qguiapplication_platform.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QHBoxLayout \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qboxlayout.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayout.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayoutitem.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qgridlayout.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLabel \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlabel.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qframe.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtGui/qpicture.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextdocument.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QPushButton \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qpushbutton.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractbutton.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtGui/qicon.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QRadioButton \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qradiobutton.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QVBoxLayout \
+		../Projeto/variaveis.cpp \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/QVector \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qvector.h \
+		../Projeto/produtos.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QMessageBox \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qmessagebox.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qdialog.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDebug \
+		../Projeto/cadastro.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QDialog \
+		ui_cadastro.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/QDate \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qdatetime.h \
+		C:/Qt/6.2.0/mingw81_64/include/QtCore/qcalendar.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QComboBox \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qcombobox.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractitemdelegate.h \
@@ -1443,14 +1464,12 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractspinbox.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qvalidator.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qregularexpression.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtGui/qicon.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qslider.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractslider.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qstyle.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qtabbar.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qtabwidget.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qrubberband.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qframe.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtCore/qabstractitemmodel.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QDateEdit \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qdatetimeedit.h \
@@ -1459,28 +1478,15 @@ release/verifica.o: ../Projeto/verifica.cpp ../Projeto/verifica.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QFormLayout \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qformlayout.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLayout \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayout.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlayoutitem.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qboxlayout.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qgridlayout.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QGridLayout \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QHBoxLayout \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLabel \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlabel.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtGui/qpicture.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextdocument.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QLineEdit \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qlineedit.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextcursor.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextformat.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qpen.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtGui/qtextoption.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QPushButton \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qpushbutton.h \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/qabstractbutton.h \
 		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QSpacerItem \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QSpinBox \
-		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QVBoxLayout
+		C:/Qt/6.2.0/mingw81_64/include/QtWidgets/QSpinBox
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\verifica.o ..\Projeto\verifica.cpp
 
 release/qrc_arquivos.o: release/qrc_arquivos.cpp 
