--- a/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/Makefile
+++ b/Projeto 3/build-Projeto-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/Makefile
@@ -209,6 +209,7 @@ Makefile: ../Projeto/Projeto.pro C:/Qt/6.2.0/mingw81_64/mkspecs/win32-g++/qmake.
 		../Projeto/Projeto.pro \
 		C:/Qt/6.2.0/mingw81_64/lib/Qt6Widgets.prl \
 		C:/Qt/6.2.0/mingw81_64/lib/Qt6Gui.prl \
+		C:/Qt/6.2.0/mingw81_64/lib/Qt6Sql.prl \
 		C:/Qt/6.2.0/mingw81_64/lib/Qt6Core.prl \
 		C:/Qt/6.2.0/mingw81_64/lib/Qt6EntryPoint.prl \
 		C:/Qt/6.2.0/mingw81_64/mkspecs/features/build_pass.prf \
@@ -355,6 +356,7 @@ C:/Qt/6.2.0/mingw81_64/mkspecs/features/lex.prf:
 ../Projeto/Projeto.pro:
 C:/Qt/6.2.0/mingw81_64/lib/Qt6Widgets.prl:
 C:/Qt/6.2.0/mingw81_64/lib/Qt6Gui.prl:
+C:/Qt/6.2.0/mingw81_64/lib/Qt6Sql.prl:
 C:/Qt/6.2.0/mingw81_64/lib/Qt6Core.prl:
 C:/Qt/6.2.0/mingw81_64/lib/Qt6EntryPoint.prl:
 C:/Qt/6.2.0/mingw81_64/mkspecs/features/build_pass.prf:
